[gd_scene load_steps=9 format=3 uid="uid://poa2wgmkif4f"]

[ext_resource type="Script" path="res://script/dialogue1.gd" id="1_kd8r2"]
[ext_resource type="Texture2D" uid="uid://b656b8k7rct7w" path="res://background/room.jpg" id="1_x8w30"]
[ext_resource type="Texture2D" uid="uid://n372d5b8rytk" path="res://background/nobody.png" id="2_8x6r5"]
[ext_resource type="Texture2D" uid="uid://d1wimca0mlx68" path="res://background/dialog.png" id="3_j4r4h"]
[ext_resource type="StyleBox" uid="uid://cnkd4fdmriu21" path="res://background/new_style_box_flat.tres" id="4_53xl5"]
[ext_resource type="StyleBox" uid="uid://dt483lgrpdu4m" path="res://background/press.tres" id="5_bv6ys"]
[ext_resource type="FontFile" uid="uid://dmcupxn2vy5sx" path="res://background/Jaro-Regular-VariableFont_opsz.ttf" id="6_okj5x"]
[ext_resource type="PackedScene" uid="uid://d2k7qmpyqy6jm" path="res://scene/setting.tscn" id="8_l5ky5"]

[node name="dailgue1" type="Node2D"]
process_mode = 1
script = ExtResource("1_kd8r2")

[node name="dialogue" type="VBoxContainer" parent="."]
offset_left = 465.0
offset_top = 424.0
offset_right = 1320.0
offset_bottom = 518.0

[node name="41094850" type="Sprite2D" parent="dialogue"]
position = Vector2(492.5, 115.5)
scale = Vector2(1.915, 2.16667)
texture = ExtResource("1_x8w30")

[node name="Nobody" type="Sprite2D" parent="dialogue"]
position = Vector2(-72.75, 278.25)
scale = Vector2(0.9, 0.891111)
texture = ExtResource("2_8x6r5")

[node name="Dialog" type="Sprite2D" parent="dialogue"]
position = Vector2(462.25, 74)
scale = Vector2(4.02321, 0.793249)
texture = ExtResource("3_j4r4h")

[node name="name" type="Label" parent="dialogue"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 35
text = "King :"

[node name="text" type="Label" parent="dialogue"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 25

[node name="profile" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 750.044
offset_top = 343.025
offset_right = 1155.04
offset_bottom = 700.025
grow_horizontal = 2
grow_vertical = 2

[node name="41094850" type="Sprite2D" parent="profile"]
position = Vector2(207.458, 221.975)
scale = Vector2(1.915, 2.23494)
texture = ExtResource("1_x8w30")

[node name="name" type="Label" parent="profile"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 50
text = "What is your name ?"

[node name="input_name" type="LineEdit" parent="profile"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 50

[node name="label_error" type="Label" parent="profile"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 25
text = "*Please enter a valid name "

[node name="ID" type="Label" parent="profile"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 50
text = "What is your ID?"

[node name="input_ID" type="LineEdit" parent="profile"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 50

[node name="label_error2" type="Label" parent="profile"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 25
text = "*Please enter a valid id"

[node name="Done" type="Button" parent="profile"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okj5x")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("4_53xl5")
theme_override_styles/hover = ExtResource("4_53xl5")
theme_override_styles/disabled = ExtResource("5_bv6ys")
theme_override_styles/focus = ExtResource("5_bv6ys")
text = "Done"

[node name="first" type="Timer" parent="."]

[node name="second" type="Timer" parent="."]

[node name="setting" parent="." instance=ExtResource("8_l5ky5")]
visible = false

[connection signal="text_changed" from="profile/input_name" to="." method="_on_input_name_text_changed"]
[connection signal="focus_entered" from="profile/input_ID" to="." method="_on_input_id_focus_entered"]
[connection signal="text_changed" from="profile/input_ID" to="." method="_on_input_id_text_changed"]
[connection signal="pressed" from="profile/Done" to="." method="_on_done_pressed"]
[connection signal="timeout" from="first" to="." method="_on_first_timeout"]
[connection signal="timeout" from="second" to="." method="_on_second_timeout"]
